--- a/udkast/samlet udkast/jose/besvaergelser.html
+++ b/udkast/samlet udkast/jose/besvaergelser.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO relevante tags -->
     <title>Besværgelser bibliotek</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <meta name="description" content="Vil du lærer at kaste besværgelser lige som i Harry Potter? Det kan du her!">
     <meta name="keywords" content="Lær besværgelser,lumos,nox,Harry Potter,Wingardium Leviosa,Patrificus Totalus,Avada Kedava,doloroso,imperio,Expecto Patronum,expilliarmus">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
