--- a/udkast/samlet udkast/jose/eliksir.html
+++ b/udkast/samlet udkast/jose/eliksir.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO relevante tags -->
     <title>Eliksir bibliotek</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <meta name="description" content="Lær om magiske eliksirer fra Harry Potter universet, så du også kender ingredienserne til felix felicis.">
     <meta name="keywords" content="Harry Potter, eliksir,veritaserum,felix felicis,armontentia,Skele-gro,polyjuice,livseliksir">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
