--- a/udkast/samlet udkast/jose/karakter-bibliotek.html
+++ b/udkast/samlet udkast/jose/karakter-bibliotek.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO relevante tags -->
     <title>Karakter bibliotek</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <meta name="description" content="Læs om dine favorit karakterer fra Harry Potter universet! Læs om alt fra Harry til Voldemort.">
     <meta name="keywords" content="karakterer,Harry Potter,Ron Weasley,Hermione Granger,Albus Dumbledore,Voldemort, Neville, Luna, Cedric,Draco">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
