--- a/udkast/samlet udkast/jose/magiskedyr.html
+++ b/udkast/samlet udkast/jose/magiskedyr.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO relevante tags -->
     <title>Magiske væsner bibliotek</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <meta name="description" content="Kender du de magiske væsner fra Harry Potter universet? Her kan du læse om en masse af dem. Læs om enhjørninge og boggarter, lær hvad Pixier er for nogle drilske væsner her!">
     <meta name="keywords" content="Harry Potter,magiske væsner, magiske dyr, arcomantula,basilisk,boggart,enhjøring,futskolopender,Fønix,hippogriff,pixie,thestral">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
