--- a/udkast/samlet udkast/jose/tutorials.html
+++ b/udkast/samlet udkast/jose/tutorials.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO relevante tags -->
     <title>Magiske tutorials</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <meta name="description" content="Lær at lave din egen tryllestav, eliksirer og meget andet fra Harry Potters magiske verden.">
     <meta name="keywords" content="tutorial,Harry Potter,tryllestav,eliksir,svævende lys,DIY">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
