--- a/udkast/insta-ad/insta.html
+++ b/udkast/insta-ad/insta.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Eksamensprojekt - 2 semester</title>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <meta name="description" content="Udforsk Harry Potter, Her kan du lære om Harry, Ron, Hermione, Voldemort, Dumbledore mm.">
     <meta name="keywords" content="Harry Potter, Magiske væsner, Besværgelser, Eliksirer, Quiz, Sjove fakta mm.">
   </head>
