--- a/færdig_website_kode/udforsk.html
+++ b/færdig_website_kode/udforsk.html
@@ -113,7 +113,7 @@
                                             Patronus: Kronhjort<br>
                                             Boggart: Dementor
                                         </p>
-                                        <a href="karakter-bibliotek.html#harry"><button class="grif">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#harry"><span class="knap grif">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                                             Patronus: Jack Russel Terrier<br>
                                             Boggart: Kæmpe edderkop
                                         </p>
-                                        <a href="karakter-bibliotek.html#ron"><button class="grif">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#ron"><span class="knap grif">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -145,7 +145,7 @@
                                             Patronus: Odder<br>
                                             Boggart: McGonagall der dumper hende
                                         </p>
-                                        <a href="karakter-bibliotek.html#hermione"><button class="grif">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#hermione"><span class="knap grif">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +163,7 @@
                                             Patronus: Kan ikke producere en<br>
                                             Boggart: Ukendt
                                         </p>
-                                        <a href="karakter-bibliotek.html#draco"><button class="slyther">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#draco"><span class="knap slyther">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                             Patronus: Fønix<br>
                                             Boggart: Hans søster Arianas lig
                                         </p>
-                                        <a href="karakter-bibliotek.html#dumledore"><button class="grif">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#dumledore"><span class="knap grif">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                             Patronus: Kan ikke producere en<br>
                                             Boggart: Ham selv død
                                         </p>
-                                        <a href="karakter-bibliotek.html#voldemort"><button class="slyther">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#voldemort"><span class="knap slyther">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                                             Patronus: Hare<br>
                                             Boggart: Ukendt
                                         </p>
-                                        <a href="karakter-bibliotek.html#luna"><button class="raven">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#luna"><span class="knap raven">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -230,7 +230,7 @@
                                             Patronus: Ukendt<br>
                                             Boggart: Ukendt
                                         </p>
-                                        <a href="karakter-bibliotek.html#cedric"><button class="huffle">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#cedric"><span class="knap huffle">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -246,7 +246,7 @@
                                             Patronus: Tog ingen dyreform<br>
                                             Boggart: Severus Snape
                                         </p>
-                                        <a href="karakter-bibliotek.html#neville"><button class="grif">Læs mere her</button></a>
+                                        <a href="karakter-bibliotek.html#neville"><span class="knap grif">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -285,7 +285,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#wingardium"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#wingardium"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -299,7 +299,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#lumos"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#lumos"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -313,7 +313,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#alohomora"><button class="besv">Læs mere  her</button></a>
+                                        <a href="besvaergelser.html#alohomora"><span class="knap besv">Læs mere  her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -329,7 +329,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#expilliarmus"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#expilliarmus"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -343,7 +343,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#pertrificus"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#pertrificus"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -357,7 +357,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#expecto"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#expecto"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -374,7 +374,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#dolodroso"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#dolodroso"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -388,7 +388,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#imperio"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#imperio"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -402,7 +402,7 @@
                                         <p class="info-text">
 
                                         </p>
-                                        <a href="besvaergelser.html#avada"><button class="besv">Læs mere her</button></a>
+                                        <a href="besvaergelser.html#avada"><span class="knap besv">Læs mere her</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -439,7 +439,7 @@
                                     <p class="info-text">
 
                                     </p>
-                                    <a href="eliksir.html#polyjuice"><button class="besv">Læs mere her</button></a>
+                                    <a href="eliksir.html#polyjuice"><span class="knap besv">Læs mere her</span></a>
                                 </div>
                             </div>
                         </div>
@@ -453,7 +453,7 @@
                                     <p class="info-text">
 
                                     </p>
-                                    <a href="eliksir.html#veritaseum"><button class="besv">Læs mere her</button></a>
+                                    <a href="eliksir.html#veritaseum"><span class="knap besv">Læs mere her</span></a>
                                 </div>
                             </div>
                         </div>
@@ -467,7 +467,7 @@
                                     <p class="info-text">
 
                                     </p>
-                                    <a href="eliksir.html#felix"><button class="besv">Læs mere her</button></a>
+                                    <a href="eliksir.html#felix"><span class="knap besv">Læs mere her</span></a>
                                 </div>
                             </div>
                         </div>
@@ -483,7 +483,7 @@
                                     <p class="info-text">
 
                                     </p>
-                                    <a href="eliksir.html#amortentia"><button class="besv">Læs mere her</button></a>
+                                    <a href="eliksir.html#amortentia"><span class="knap besv">Læs mere her</span></a>
                                 </div>
                             </div>
                         </div>
@@ -497,7 +497,7 @@
                                     <p class="info-text">
 
                                     </p>
-                                    <a href="eliksir.html#livseliksir"><button class="besv">Læs mere her</button></a>
+                                    <a href="eliksir.html#livseliksir"><span class="knap besv">Læs mere her</span></a>
                                 </div>
                             </div>
                         </div>
@@ -511,7 +511,7 @@
                                     <p class="info-text">
 
                                     </p>
-                                    <a href="eliksir.html#skelegro"><button class="besv">Læs mere her</button></a>
+                                    <a href="eliksir.html#skelegro"><span class="knap besv">Læs mere her</span></a>
                                 </div>
                             </div>
                         </div>
@@ -549,7 +549,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#arcomantula"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#arcomantula"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -563,7 +563,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#basilisk"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#basilisk"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -577,7 +577,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#boggart"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#boggart"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -593,7 +593,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#enhjoerning"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#enhjoerning"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -607,7 +607,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#futskolopender"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#futskolopender"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -621,7 +621,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#foenix"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#foenix"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -637,7 +637,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#hippogriff"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#hippogriff"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -651,7 +651,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#pixie"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#pixie"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
@@ -665,7 +665,7 @@
                                 <p class="info-text">
 
                                 </p>
-                                <a href="magiskedyr.html#thestral"><button class="besv">Læs mere her</button></a>
+                                <a href="magiskedyr.html#thestral"><span class="knap besv">Læs mere her</span></a>
                             </div>
                         </div>
                     </div>
