--- a/færdig_website_kode/quiz-easy.html
+++ b/færdig_website_kode/quiz-easy.html
@@ -62,7 +62,7 @@
             </div>
           </div>
         </div>
-      <div class="container row what">
+      <div class="container row">
         <div class="content">
           <h1>Quiz</h1>
         </div>
@@ -72,22 +72,21 @@
         </div>
       </div>
 
-      <div class="quiz-box container">
-          <div class="quiz row">
-              <div class="container easy">
-                  <div class="row">
-                    <h2 class="text-center"><u>Den nemme Harry Potter quiz!</u></h2>
-                </div>
-              </div>
-              <div class="container easy">
-              <div class="row well">
-                  <h5 id="test_status">Klik for at starte quizzen!</h5>
-                  <div id="test"></div>
-              </div>
-              </div>
-              <button class="btn btn-primary" id="knap" type="button" onclick="startQuiz()">Start Quiz</button>
+      <div class="container">
+        <div class="quiz-box w-100 mx-0">
+          <div class="row">
+            <div class="col">
+              <h2 class="text-center"><u>Den nemme Harry Potter quiz!</u></h2>
+            </div>
           </div>
-
+          <div class="row">
+            <div class="col">
+              <h5 id="test_status">Klik for at starte quizzen!</h5>
+              <div id="test"></div>
+            </div>
+          </div>
+          <button class="btn btn-primary" id="knap" type="button" onclick="startQuiz()">Start Quiz</button>
+        </div>
       </div>
 
       <div class="quiz-back-btn">
@@ -100,7 +99,7 @@
         <div class="col-12 p-0">
           <footer class="page-footer font-small">
             <p class="undertext footer-text">Dette webside er et eksamensprojekt lavet af:<br>Regitze Espensen, Josefine Schougaard og Maja Olsson.</p>
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <div class="footer-copyright text-center pt-3">© 2020 Copyright:
               <a href="index.html" class="text-copyright"> udforskharrypotter.dk</a>
               <br>
               <a href="reklame.html" target="_blank" class="text-copyright">Banner reklame</a>
