--- a/færdig_website_kode/quiz-medium.html
+++ b/færdig_website_kode/quiz-medium.html
@@ -71,23 +71,22 @@
         </div>
       </div>
 
-        <div class="quiz-box container">
-            <div class="quiz row">
-                <div class="container easy">
-                   <div class="row">
-                     <h2 class="text-center"><u>Den middel Harry Potter quiz!</u></h2>
-                  </div>
-                </div>
-                <div class="container easy">
-                <div class="row well">
-                    <h5 id="test_status">Klik for at starte quizzen!</h5>
-                    <div id="test"></div>
-                </div>
-                </div>
-                <button class="btn btn-primary" id="knap" type="button" onclick="startQuiz()">Start Quiz</button>
+      <div class="container">
+        <div class="quiz-box w-100 mx-0">
+          <div class="row">
+            <div class="col">
+              <h2 class="text-center"><u>Den middel svære Harry Potter quiz!</u></h2>
             </div>
-
+          </div>
+          <div class="row">
+            <div class="col">
+              <h5 id="test_status">Klik for at starte quizzen!</h5>
+              <div id="test"></div>
+            </div>
+          </div>
+          <button class="btn btn-primary" id="knap" type="button" onclick="startQuiz()">Start Quiz</button>
         </div>
+      </div>
 
         <div class="quiz-back-btn">
           <a href="quiz.html">
