--- a/færdig_website_kode/quiz.html
+++ b/færdig_website_kode/quiz.html
@@ -76,7 +76,7 @@
             <a href="quiz-easy.html"><span class="btn btn-center">Klik her for at starte den nemme quiz</span></a>
           </div>
           <div class="quiz-site">
-            <h3>Den middel Harry Potter quiz!</h3>
+            <h3>Den middel svære Harry Potter quiz!</h3>
             <a href="quiz-medium.html"><span class="btn btn-center">Klik her for at starte den semi nemme quiz</span></a>
           </div>
           <div class="quiz-site">
